docs(project): 更新 ADR-0029 全量 P0 进度与 NullAway 工具链阻塞记录